k8s/deployments/twisterlab-api-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twisterlab-api-v4
  namespace: twisterlab
  labels:
    app: twisterlab
    component: api
    version: "4.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twisterlab
      component: api
  template:
    metadata:
      labels:
        app: twisterlab
        component: api
    spec:
      containers:
      - name: api
        image: localhost:5000/twisterlab-api:v4.0.0 # Cible du Sprint C
        ports:
        - containerPort: 8000
          name: http
        
        # Injection Automatique des namespaces Pydantic
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        
        readinessProbe:
          httpGet:
            path: /api/v1/system/ready
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10

        volumeMounts:
        - name: archive-volume
          mountPath: /app/archives

      volumes:
      - name: archive-volume
        persistentVolumeClaim:
          claimName: twisterlab-archive-pvc
